tests/dataset/tpc-ds/compiler/c/q71.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:45Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:45Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
static int month = 12;
static int year = 1998;

typedef struct {
  int i_brand_id;
  const char *i_brand;
  int t_hour;
  int t_minute;
  double ext_price;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int i_brand_id;
  const char *i_brand;
  int t_hour;
  int t_minute;
  double ext_price;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int i_brand_id;
  const char *i_brand;
  int t_hour;
  int t_minute;
  double ext_price;
} tmp_item1_t;
typedef struct {
  int len;
  tmp_item1_t *data;
} tmp_item1_list_t;
tmp_item1_list_t create_tmp_item1_list(int len) {
  tmp_item1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int i_item_sk;
  int i_brand_id;
  const char *i_brand;
  int i_manager_id;
} item_t;
typedef struct {
  int len;
  item_t *data;
} item_list_t;
item_list_t create_item_list(int len) {
  item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int t_time_sk;
  int t_hour;
  int t_minute;
  const char *t_meal_time;
} time_dim_t;
typedef struct {
  int len;
  time_dim_t *data;
} time_dim_list_t;
time_dim_list_t create_time_dim_list(int len) {
  time_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(time_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_date_sk;
  int d_moy;
  int d_year;
} date_dim_t;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  double ws_ext_sales_price;
  int ws_sold_date_sk;
  int ws_item_sk;
  int ws_sold_time_sk;
} web_sale_t;
typedef struct {
  int len;
  web_sale_t *data;
} web_sale_list_t;
web_sale_list_t create_web_sale_list(int len) {
  web_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(web_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  double cs_ext_sales_price;
  int cs_sold_date_sk;
  int cs_item_sk;
  int cs_sold_time_sk;
} catalog_sale_t;
typedef struct {
  int len;
  catalog_sale_t *data;
} catalog_sale_list_t;
catalog_sale_list_t create_catalog_sale_list(int len) {
  catalog_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(catalog_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  double ss_ext_sales_price;
  int ss_sold_date_sk;
  int ss_item_sk;
  int ss_sold_time_sk;
} store_sale_t;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  double ext_price;
  int item_sk;
  int time_sk;
} ws_item_t;
typedef struct {
  int len;
  ws_item_t *data;
} ws_item_list_t;
ws_item_list_t create_ws_item_list(int len) {
  ws_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(ws_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  double ext_price;
  int item_sk;
  int time_sk;
} cs_item_t;
typedef struct {
  int len;
  cs_item_t *data;
} cs_item_list_t;
cs_item_list_t create_cs_item_list(int len) {
  cs_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(cs_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  double ext_price;
  int item_sk;
  int time_sk;
} ss_item_t;
typedef struct {
  int len;
  ss_item_t *data;
} ss_item_list_t;
ss_item_list_t create_ss_item_list(int len) {
  ss_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(ss_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int i_brand_id;
  int i_brand;
  int t_hour;
  int t_minute;
  double ext_price;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q71_simplified_result;
static void test_TPCDS_Q71_simplified() {
  tmp1_t tmp1[] = {(tmp1_t){.i_brand_id = 10,
                            .i_brand = "BrandA",
                            .t_hour = 18,
                            .t_minute = 0,
                            .ext_price = 200.0},
                   (tmp_item_t){.i_brand_id = 20,
                                .i_brand = "BrandB",
                                .t_hour = 8,
                                .t_minute = 30,
                                .ext_price = 150.0},
                   (tmp_item1_t){.i_brand_id = 10,
                                 .i_brand = "BrandA",
                                 .t_hour = 8,
                                 .t_minute = 30,
                                 .ext_price = 100.0}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q71_simplified_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q71_simplified_result.len; i3++) {
      if (test_TPCDS_Q71_simplified_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  item_t item[] = {(item_t){.i_item_sk = 1,
                            .i_brand_id = 10,
                            .i_brand = "BrandA",
                            .i_manager_id = 1},
                   (item_t){.i_item_sk = 2,
                            .i_brand_id = 20,
                            .i_brand = "BrandB",
                            .i_manager_id = 1}};
  int item_len = sizeof(item) / sizeof(item[0]);
  time_dim_t time_dim[] = {
      (time_dim_t){.t_time_sk = 1,
                   .t_hour = 8,
                   .t_minute = 30,
                   .t_meal_time = "breakfast"},
      (time_dim_t){
          .t_time_sk = 2, .t_hour = 18, .t_minute = 0, .t_meal_time = "dinner"},
      (time_dim_t){
          .t_time_sk = 3, .t_hour = 12, .t_minute = 0, .t_meal_time = "lunch"}};
  int time_dim_len = sizeof(time_dim) / sizeof(time_dim[0]);
  date_dim_t date_dim[] = {
      (date_dim_t){.d_date_sk = 1, .d_moy = 12, .d_year = 1998}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  web_sale_t web_sales[] = {(web_sale_t){.ws_ext_sales_price = 100.0,
                                         .ws_sold_date_sk = 1,
                                         .ws_item_sk = 1,
                                         .ws_sold_time_sk = 1}};
  int web_sales_len = sizeof(web_sales) / sizeof(web_sales[0]);
  catalog_sale_t catalog_sales[] = {
      (catalog_sale_t){.cs_ext_sales_price = 200.0,
                       .cs_sold_date_sk = 1,
                       .cs_item_sk = 1,
                       .cs_sold_time_sk = 2}};
  int catalog_sales_len = sizeof(catalog_sales) / sizeof(catalog_sales[0]);
  store_sale_t store_sales[] = {(store_sale_t){.ss_ext_sales_price = 150.0,
                                               .ss_sold_date_sk = 1,
                                               .ss_item_sk = 2,
                                               .ss_sold_time_sk = 1}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  ws_item_list_t tmp4 = ws_item_list_t_create(web_sales.len * date_dim.len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < web_sales_len; tmp6++) {
    web_sale_t ws = web_sales[tmp6];
    for (int tmp7 = 0; tmp7 < date_dim_len; tmp7++) {
      date_dim_t d = date_dim[tmp7];
      if (!(d.d_date_sk == ws.ws_sold_date_sk)) {
        continue;
      }
      if (!(d.d_moy == month && d.d_year == year)) {
        continue;
      }
      tmp4.data[tmp5] = (ws_item_t){.ext_price = ws.ws_ext_sales_price,
                                    .item_sk = ws.ws_item_sk,
                                    .time_sk = ws.ws_sold_time_sk};
      tmp5++;
    }
  }
  tmp4.len = tmp5;
  cs_item_list_t tmp8 = cs_item_list_t_create(catalog_sales.len * date_dim.len);
  int tmp9 = 0;
  for (int tmp10 = 0; tmp10 < catalog_sales_len; tmp10++) {
    catalog_sale_t cs = catalog_sales[tmp10];
    for (int tmp11 = 0; tmp11 < date_dim_len; tmp11++) {
      date_dim_t d = date_dim[tmp11];
      if (!(d.d_date_sk == cs.cs_sold_date_sk)) {
        continue;
      }
      if (!(d.d_moy == month && d.d_year == year)) {
        continue;
      }
      tmp8.data[tmp9] = (cs_item_t){.ext_price = cs.cs_ext_sales_price,
                                    .item_sk = cs.cs_item_sk,
                                    .time_sk = cs.cs_sold_time_sk};
      tmp9++;
    }
  }
  tmp8.len = tmp9;
  ss_item_list_t tmp12 = ss_item_list_t_create(store_sales.len * date_dim.len);
  int tmp13 = 0;
  for (int tmp14 = 0; tmp14 < store_sales_len; tmp14++) {
    store_sale_t ss = store_sales[tmp14];
    for (int tmp15 = 0; tmp15 < date_dim_len; tmp15++) {
      date_dim_t d = date_dim[tmp15];
      if (!(d.d_date_sk == ss.ss_sold_date_sk)) {
        continue;
      }
      if (!(d.d_moy == month && d.d_year == year)) {
        continue;
      }
      tmp12.data[tmp13] = (ss_item_t){.ext_price = ss.ss_ext_sales_price,
                                      .item_sk = ss.ss_item_sk,
                                      .time_sk = ss.ss_sold_time_sk};
      tmp13++;
    }
  }
  tmp12.len = tmp13;
  list_int union_sales = concat(tmp4, tmp8, tmp12);
  result_item_list_t result = (result_item_list_t){0, NULL};
  printf("[");
  for (int i16 = 0; i16 < result.len; i16++) {
    if (i16 > 0)
      printf(",");
    result_item_t it = result.data[i16];
    printf("{");
    _json_string("i_brand_id");
    printf(":");
    _json_int(it.i_brand_id);
    printf(",");
    _json_string("i_brand");
    printf(":");
    _json_int(it.i_brand);
    printf(",");
    _json_string("t_hour");
    printf(":");
    _json_int(it.t_hour);
    printf(",");
    _json_string("t_minute");
    printf(":");
    _json_int(it.t_minute);
    printf(",");
    _json_string("ext_price");
    printf(":");
    _json_float(it.ext_price);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q71_simplified_result = result;
  test_TPCDS_Q71_simplified();
  return 0;
}
